= 移除非dev环境配置